# OpenGL-ProceduralCity

./: CMakeLists.txt  README.md
data/: cube.fsh  cube.vsh  mesh.fsh  mesh.vsh  scene.blend  scene.fbx  uber.fsh  uber.vsh  unreal.blend  unreal.fbx
data/models/buildings/: Skyscraper2.fbx
data/models/buildings/residential/: igloo.fbx
data/models/others/: butterfly_free.fbx
src/: blockyBuilding.cpp  blockyBuilding.h  building.h  classicBuilding.cpp  classicBuilding.h  cube.cpp  cube.h  cubeBuilding.cpp  cubeBuilding.h  main.cpp  plane.cpp  plane.h  sampleAlphaTest.cpp  sampleAlphaTest.h  sampleCity.cpp  sampleCity.h  sampleModel.cpp  sampleModel.h  sampleMultiModel.cpp  shape.h
